--- a/gb/24/11/23/n14377329.md
+++ b/gb/24/11/23/n14377329.md
@@ -14,32 +14,32 @@
 <p>而这天GD除了带来《Untitled, 2014》、《POWER》及《HOME SWEET HOME》的演出，他还与太阳及大声一同带来BIGBANG的经典歌曲《BANG BANG BANG》与《Fantastic Baby》，为本届MAMA颁奖典礼炒热气氛并创造了高话题。</p>
 <p>责任编辑：刘宇涵</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/25/n14143201.md#1">GD以粉丝名义捐3亿韩元 成立杜绝毒品基金会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322147.md#1">BIGBANG太阳开唱 大声与GD现身参与演出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355372.md#1">2024 MAMA颁奖典礼连办三天 GD时隔9年出席</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361321.md#1">GD太红说不出自己需要安慰 历经迷惘学会放松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/1/n11356564.md#1" target="_blank">共产暴政录：三区叛乱和侵华日军攻势协调进行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">法轮功受难中重建中华价值观</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/15/n10486558.md#1" target="_blank">【还原史实】国共内战中被欺骗的美国政府</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/1/n14472598.md#1">【品读唐诗】登高秋望 吟成古今第一七言律</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642446.md#1">【未解之谜】中共官员死而复活 带回冥界惊人信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/10/n14632971.md#1">他动一念 数十年修行前功尽弃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642937.md#1">祖辈积德福荫子孙 一个善有善报的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630165.md#1">【古道人生】坠水失踪二十年 原来去了桃花源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644770.md#1">【重播】莫里西就国民警卫队士兵死亡事件通报</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644631.md#1">【十字路口】46年前神秘小书 预言破解中共邪招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644621.md#1">【纪元焦点】香港公寓大火 官员被指玩忽职守</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642897.md#1">中国经济有多差 多名年轻人讲述现状</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14643099.md#1">员工入职“三只松鼠”须改姓鼠 规定引争议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643160.md#1">郑伊健日本演唱会突然取消 原因令人傻眼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14643025.md#1">任达华新片大陆上映 9天总票房不足60万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644744.md#1">霍建华被爆接陆剧自降片酬 少收千万原因曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643419.md#1">《阿凡达3》票房若不佳 卡麦隆将停拍系列作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643853.md#1">张学友近照曝光 苍老模样令网友震惊</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642715.md#1">为何汽车后方挡风玻璃上有橘色的线条？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14643083.md#1">洗衣洗不掉汗臭和污渍？ 这样洗衣轻松搞定</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643410.md#1">出国旅行 当心护照因为这个原因不能使用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644212.md#1">黑色星期五 商家有何心理策略让你“血拼”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643252.md#1">怎么做才算好邻居？ 英国研究告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/23/n14377329.htm">GD于MAMA获远见者奖 BIGBANG演出引话题</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/23/n14377329.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
